--- a/templates/obtain.ejs
+++ b/templates/obtain.ejs
@@ -1,5 +1,5 @@
 <h1>&iquest;C&oacute;mo obtener cr&eacute;ditos?</h1>
-<p><small>Puedes obtener cr&eacute;ditos de Apretaste (&sect;) de las siguientes formas:</small></p>
+<p>Puedes obtener cr&eacute;ditos de Apretaste (&sect;) de las siguientes formas:</p>
 
 <h2>1) Refiriendo a sus amigos</h2>
 <p>Use el servicio <b>referir</b> para decirnos quien le habl&oacute; de Apretaste y ganar cr&eacute;ditos. Adem&aacute;s refiera a sus amigos y familia para ganar m&aacute;s cr&eacute;dito. Tambien ganar&aacute; cr&eacute;ditos por todas las personas que ellos refieran.</p>
@@ -17,4 +17,4 @@
 <p>Puede ganar creditos compartiendo sus ideas de como mejorar nuestra app mediante el servicio SUGERENCIAS. Esta es nuestra forma de decir Gracias por colabrar con nuestra comunidad.</p>
 
 <h2>6) Comprando desde el exterior</h2>
-<p>Si tienes familia en el exterior, ellos pueden recargar tu cuenta en Apretaste desde <a href="https://apretaste.com/topup" target="_blank">Apretaste.com/TopUp</a>.</p>
+<p>Si tienes familia en el exterior, ellos pueden recargar tu cuenta en Apretaste desde <a href="https://apretaste.org/topup" target="_blank">Apretaste.org/TopUp</a>.</p>
