--- a/templates/obtain.ejs
+++ b/templates/obtain.ejs
@@ -1,20 +1,22 @@
-<h1>&iquest;C&oacute;mo obtener cr&eacute;ditos?</h1>
-<p>Puedes obtener cr&eacute;ditos de Apretaste (&sect;) de las siguientes formas:</p>
+<div class="row">
+    <h1>¿Cómo obtener créditos?</h1>
+    <p>Puedes obtener créditos de Apretaste (§) de las siguientes formas:</p>
 
-<h2>1) Refiriendo a sus amigos</h2>
-<p>Use el servicio <b>referir</b> para decirnos quien le habl&oacute; de Apretaste y ganar cr&eacute;ditos. Adem&aacute;s refiera a sus amigos y familia para ganar m&aacute;s cr&eacute;dito. Tambien ganar&aacute; cr&eacute;ditos por todas las personas que ellos refieran.</p>
+    <h2>1) Refiriendo a sus amigos</h2>
+    <p>Use el servicio <b>referir</b> para decirnos quien le habló de Apretaste y ganar créditos. Además refiera a sus amigos y familia para ganar más crédito. Tambien ganará créditos por todas las personas que ellos refieran.</p>
 
-<h2>2) Respondiendo encuestas</h2>
-<p>En Apretaste se ofrecen encuestas, y cada una de ellas ofrece diferentes premios en cr&eacute;dito al completarlas. Accede al servicio ENCUESTA desde la pantalla inicial para ver la lista de encuestas activas.</p>
+    <h2>2) Respondiendo encuestas</h2>
+    <p>En Apretaste se ofrecen encuestas, y cada una de ellas ofrece diferentes premios en crédito al completarlas. Accede al servicio ENCUESTA desde la pantalla inicial para ver la lista de encuestas activas.</p>
 
-<h2>3) Cumpliendo retos</h2>
-<p>Cada semana te planteamos Retos que puedes cumplir para ganar creditos. Abra el servicio Retos desde la pantalla inicial, mire los retos de esta semana y empiece a trabajar en ellos.</p>
+    <h2>3) Cumpliendo retos</h2>
+    <p>Cada semana te planteamos Retos que puedes cumplir para ganar creditos. Abra el servicio Retos desde la pantalla inicial, mire los retos de esta semana y empiece a trabajar en ellos.</p>
 
-<h2>4) Ganando concursos</h2>
-<p>En Apretaste tenemos concursos con premios que van desde tel&eacute;fonos y recargas Cubacel hasta cr&eacute;dito. Accede al servicio CONCURSO desde la pantalla inicial para ver los concursos activos y empezar a ganar.</p>
+    <h2>4) Ganando concursos</h2>
+    <p>En Apretaste tenemos concursos con premios que van desde teléfonos y recargas Cubacel hasta crédito. Accede al servicio CONCURSO desde la pantalla inicial para ver los concursos activos y empezar a ganar.</p>
 
-<h2>5) Ayudando a mejorar Apretaste</h2>
-<p>Puede ganar creditos compartiendo sus ideas de como mejorar nuestra app mediante el servicio SUGERENCIAS. Esta es nuestra forma de decir Gracias por colabrar con nuestra comunidad.</p>
+    <h2>5) Ayudando a mejorar Apretaste</h2>
+    <p>Puede ganar creditos compartiendo sus ideas de como mejorar nuestra app mediante el servicio SUGERENCIAS. Esta es nuestra forma de decir Gracias por colabrar con nuestra comunidad.</p>
 
-<h2>6) Comprando desde el exterior</h2>
-<p>Si tienes familia en el exterior, ellos pueden recargar tu cuenta en Apretaste desde <a href="https://apretaste.org/topup" target="_blank">Apretaste.org/TopUp</a>.</p>
+    <h2>6) Comprando desde el exterior</h2>
+    <p>Si tienes familia en el exterior, ellos pueden recargar tu cuenta en Apretaste desde <a href="https://apretaste.org/topup" target="_blank">Apretaste.org/TopUp</a>.</p>
+</div>
