--- a/templates/confirmation.ejs
+++ b/templates/confirmation.ejs
@@ -1,16 +1,18 @@
 <div class="row">
-	<h1>Confirmar transacción</h1>
+	<div class="col s12">
+		<h1>Confirmar transacción</h1>
 
-	<% if(sale) { %>
-		<p>¿Está seguro que quiere canjear <b><%= article.toLowerCase() %></b> por el valor de <b>§<%= Number.parseFloat(price).toFixed(2) %></b>? Confirme presionando el botón más abajo.</p>
-	<% } else { %>
-		<p>Recibimos su solicitud de transferir <b>§<%= Number.parseFloat(price).toFixed(2) %></b> a <b>@<%= receiver.username %></b>. Confirme presionando el botón más abajo.</p>
-	<% } %>
+		<% if(sale) { %>
+			<p>¿Está seguro que quiere canjear <b><%= article.toLowerCase() %></b> por el valor de <b>§<%= Number.parseFloat(price).toFixed(2) %></b>? Confirme presionando el botón más abajo.</p>
+		<% } else { %>
+			<p>Recibimos su solicitud de transferir <b>§<%= Number.parseFloat(price).toFixed(2) %></b> a <b>@<%= receiver.username %></b>. Confirme presionando el botón más abajo.</p>
+		<% } %>
 
-	<a class="waves-effect waves-light btn" href="#" onclick="apretaste.send({command:'CREDITO ACEPTAR', data:{hash:'<%= hash %>'}})">Confirmar</a>
+		<a class="waves-effect waves-light btn" href="#" onclick="apretaste.send({command:'CREDITO ACEPTAR', data:{hash:'<%= hash %>'}})">Confirmar</a>
 
-	<p class="fine-print">
-		Omita este mensaje si no reconoce esta transacción y su crédito no será afectado.<br/>
-		Su transferencia será descartada si demora más de una hora en confirmar.
-	</p>
+		<p class="fine-print">
+			Omita este mensaje si no reconoce esta transacción y su crédito no será afectado.<br/>
+			Su transferencia será descartada si demora más de una hora en confirmar.
+		</p>
+	</div>
 </div>
