--- a/templates/transfer.ejs
+++ b/templates/transfer.ejs
@@ -16,6 +16,8 @@
 		</div>
 
 		<!-- TRANSFER BUTTON -->
-		<a class="btn-floating btn-large waves-effect waves-light floating-action" href="#!" onclick="transferCredits(credit)"><i class="material-icons">send</i></a>
+		<div class="fixed-action-btn">
+			<a class="btn-floating btn-large waves-effect waves-light green" href="#!" onclick="transferCredits(credit)"><i class="material-icons">send</i></a>
+		</div>
 	</div>
 </div>
