--- a/templates/transfer.ejs
+++ b/templates/transfer.ejs
@@ -10,7 +10,7 @@
 			</div>
 
 			<div class="input-field col s12">
-				<input id="amount" type="number" step = "0.01"  pattern="[0-9]+([\.,][0-9]+)?"/>
+				<input id="amount" type="text" step = "0.01"  pattern="[0-9]+([\.,][0-9]+)?"/>
 				<label for="amount">Inserte la cantidad a transferir</label>
 			</div>
 		</div>
