--- a/templates/transfer.ejs
+++ b/templates/transfer.ejs
@@ -10,7 +10,7 @@
 			</div>
 
 			<div class="input-field col s12">
-				<input id="amount" type="number" formnovalidate />
+				<input id="amount" type="text" inputmode="numeric" />
 				<label for="amount">Inserte la cantidad a transferir</label>
 			</div>
 		</div>
