--- a/templates/transfer.ejs
+++ b/templates/transfer.ejs
@@ -11,6 +11,7 @@
 
 			<div class="input-field col s12">
 				<input id="amount" type="text" inputmode="numeric" />
+				<input id="amount-dot" type="hidden">
 				<label for="amount">Inserte la cantidad a transferir</label>
 			</div>
 		</div>
