add reason to transfer

--- a/templates/transfer.ejs
+++ b/templates/transfer.ejs
@@ -14,6 +14,11 @@
 				<input id="amount-dot" type="hidden">
 				<label for="amount">Inserte la cantidad a transferir</label>
 			</div>
+
+			<div class="input-field col s12">
+				<textarea id="reason" class="materialize-textarea" maxlength="50"></textarea>
+				<label for="reason">¿Cuál es la razón de su transferencia?</label>
+			</div>
 		</div>
 
         <!-- TRANSFER BUTTON -->
