--- a/templates/obtain.ejs
+++ b/templates/obtain.ejs
@@ -3,25 +3,21 @@
 		<h1>¿Cómo obtener créditos?</h1>
 		<p>Puedes obtener créditos de Apretaste (§) de las siguientes formas:</p>
 
-		<h2><small>1.</small> Refiriendo a sus amigos</h2>
-		<p>Use el servicio <b>referir</b> para decirnos quien le habló de Apretaste y ganar créditos. Además refiera a sus amigos y familia para ganar más crédito. Tambien ganará créditos por todas las personas que ellos refieran.</p>
+		<h2><small>1.</small> Invitando amigos</h2>
+		<p>Invita a tus amigos y familiares a usar la app y tanto tú como ellos ganarán créditos. Encuentra el link a invitar en el menú de la izquierda.</p>
 
 		<h2><small>2.</small> Respondiendo encuestas</h2>
-		<p>En Apretaste se ofrecen encuestas, y cada una de ellas ofrece diferentes premios en crédito al completarlas. Accede al servicio ENCUESTA desde la pantalla inicial para ver la lista de encuestas activas.</p>
+		<p>En Apretaste se ofrecen encuestas, y cada una de ellas ofrece diferentes premios en crédito al completarlas. Accede al servicio Encuesta para ver la lista de encuestas activas.</p>
 
 		<h2><small>3.</small> Cumpliendo retos</h2>
-		<p>Cada semana te planteamos Retos que puedes cumplir para ganar creditos. Abra el servicio Retos desde la pantalla inicial, mire los retos de esta semana y empiece a trabajar en ellos.</p>
+		<p>Cada día salen nuevos retos que te ayudan a ganar créditos. Abre los retos desde el menú a la izquierda y empieza a trabajar en ellos.</p>
 
 		<h2><small>4.</small> Ganando concursos</h2>
-		<p>En Apretaste tenemos concursos con premios que van desde teléfonos y recargas Cubacel hasta crédito. Accede al servicio CONCURSO desde la pantalla inicial para ver los concursos activos y empezar a ganar.</p>
-
-		<h2><small>5.</small> Ayudando a mejorar Apretaste</h2>
-		<p>Puede ganar creditos compartiendo sus ideas de como mejorar nuestra app mediante el servicio SUGERENCIAS. Esta es nuestra forma de decir Gracias por colabrar con nuestra comunidad.</p>
-
-		<h2><small>6.</small> Comprando desde el exterior</h2>
-		<p>Si tienes familia en el exterior, ellos pueden recargar tu cuenta en Apretaste desde <u>Apretaste.org/TopUp</u>.</p>
+		<p>En Apretaste tenemos concursos con premios que van desde teléfonos y recargas Cubacel hasta crédito. Revisa los concursos activos y empieza a ganar.</p>
 	</div>
 </div>
+
+<div class="bottom-space"></div>
 
 <!-- GO BACK -->
 <div class="fixed-action-btn">
