--- a/templates/enviar.ejs
+++ b/templates/enviar.ejs
@@ -42,6 +42,6 @@
 	</div>
 	<div class="modal-footer">
 		<a href="#!" class="modal-close waves-effect waves-light btn-flat">Cancelar</a>
-		<a onclick="transfer()" class="modal-close waves-effect waves-red btn-flat red-text">Transferir</a>
+		<a onclick="transfer()" class="modal-close waves-effect waves-green btn-flat green-text">Transferir</a>
 	</div>
 </div>
