--- a/templates/enviar.ejs
+++ b/templates/enviar.ejs
@@ -12,7 +12,7 @@
 			</div>
 
 			<div class="input-field col s12">
-				<input id="amount" type="text" inputmode="numeric"/>
+				<input id="amount" type="number" inputmode="numeric"/>
 				<input id="amount-dot" type="hidden">
 				<label for="amount">Inserte la cantidad a transferir</label>
 			</div>
