--- a/templates/enviar.ejs
+++ b/templates/enviar.ejs
@@ -38,7 +38,7 @@
 
 <div id="transferModal" class="modal">
 	<div class="modal-content">
-		<p>¿Esta seguro de transferir §<span id="modalAmount"></span> al usuario @<span id="modalUsername"></span>? Esta acción es irrevocable.</p>
+		<p>¿Esta seguro de transferir §<span id="modalAmount"></span> al usuario <span id="modalUsername"></span>? Esta acción es irrevocable.</p>
 	</div>
 	<div class="modal-footer">
 		<a href="#!" class="modal-close waves-effect waves-light btn-flat">Cancelar</a>
