--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -1,8 +1,6 @@
 <div class="row">
 	<div class="col s12">
-		<h1>
-			<span class="green-text">§<%= Number.parseFloat(credit).toFixed(2) %></span>
-		</h1>
+		<h1 class="green-text">§<%= Number.parseFloat(credit).toFixed(2) %></h1>
 
 		<p>Use su crédito para comprar dentro de la app, o transfiera créditos a otros usuarios.</p>
 
