--- a/templates/enviar.ejs
+++ b/templates/enviar.ejs
@@ -2,8 +2,8 @@
 
 <div class="row">
 	<div class="col s12">
-		<h1>Transferir créditos</h1>
-		<p>Usted tiene §<%= Number.parseFloat(credit).toFixed(2) %> Transfiera sus créditos a otro usuario de Apretaste.</p>
+		<h1>Transferir</h1>
+		<p>Usted tiene §<%= Number.parseFloat(credit).toFixed(2) %>. Transfiera sus créditos a otro usuario de Apretaste.</p>
 
 		<div class="row">
 			<div class="input-field col s12">
