--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -2,7 +2,7 @@
 	<div class="col s12">
 		<ul class="tabs tabs-fixed-width">
 			<li class="tab"><a href="#" class="active">Crédito</a></li>
-			<li class="tab"><a href="#" onclick="apretaste.send({command: 'CREDITO OBTENER'})">Ayuda</a></li>
+			<li class="tab"><a href="#" onclick="apretaste.send({command: 'CREDITO OBTENER'})">¿Mas Créditos?</a></li>
 		</ul>
 	</div>
 
