--- a/templates/obtain.ejs
+++ b/templates/obtain.ejs
@@ -2,7 +2,7 @@
 	<div class="col s12">
 		<ul class="tabs tabs-fixed-width">
 			<li class="tab"><a href="#" onclick="apretaste.send({command: 'CREDITO'})">Crédito</a></li>
-			<li class="tab"><a href="#" class="active">Ayuda</a></li>
+			<li class="tab"><a href="#" class="active">¿Mas Créditos?</a></li>
 		</ul>
 	</div>
 
