change to mas creditos

--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -12,7 +12,7 @@
 		<% if(canTransfer) { %>
 			<p><a class="waves-effect waves-light btn-small" href="#" onclick="apretaste.send({command:'CREDITO ENVIAR'})">Transferir</a></p>
 		<% } else { %>
-			<p class="small red-text text-darken-1">Necesita nivel Topacio o superior para transferir.</p>
+			<p class="small red-text text-darken-1">Necesita ser nivel Topacio o superior para transferir.</p>
 		<% } %>
 
 		<% if(items.length) { %>
