--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -8,11 +8,11 @@
 
 	<div class="col s12">
 		<h1 class="green-text">§<%= Number.parseFloat(credit).toFixed(2) %></h1>
-
+		
 		<% if(canTransfer) { %>
-			<p><a class="waves-effect waves-light btn-small" href="#" onclick="apretaste.send({command:'CREDITO ENVIAR'})">Transferir</a></p>
+			<p><a class="waves-effect waves-light btn-small green" href="#!" onclick="apretaste.send({command:'CREDITO ENVIAR'})">Transferir</a></p>
 		<% } else { %>
-			<p class="small red-text text-darken-1">Necesita ser nivel Topacio o superior para transferir.</p>
+			<p class="small red-text text-lighten-2">Necesita ser <a href="#!" onclick="apretaste.send({command:'PERFIL NIVELES'})">nivel topacio o superior</a> para transferir.</p>
 		<% } %>
 
 		<% if(items.length) { %>
