--- a/templates/obtain.ejs
+++ b/templates/obtain.ejs
@@ -20,5 +20,8 @@
 
 		<b>4. Ganando concursos</b>
 		<p>En Apretaste tenemos concursos con premios que van desde teléfonos y recargas Cubacel hasta crédito. Revisa los concursos activos y empieza a ganar.</p>
+
+		<b>5. Encontrando cupones</b>
+		<p>Encuentra cupones entre nuestros emails y gana créditos cuando los canjeas en la app.</p>
 	</div>
 </div>
