--- a/templates/obtain.ejs
+++ b/templates/obtain.ejs
@@ -1,27 +1,34 @@
 <div class="row">
-	<div class="col s12">
-		<ul class="tabs tabs-fixed-width">
-			<li class="tab"><a href="#" onclick="apretaste.send({command: 'CREDITO'})">Crédito</a></li>
-			<li class="tab"><a href="#" class="active">¿Más Créditos?</a></li>
-		</ul>
-	</div>
+    <div class="col s12">
+        <ul class="tabs tabs-fixed-width">
+            <li class="tab"><a href="#" onclick="apretaste.send({command: 'CREDITO'})">Crédito</a></li>
+            <li class="tab"><a href="#" class="active">¿Más Créditos?</a></li>
+        </ul>
+    </div>
 
-	<div class="col s12">
-		<p>Los créditos de Apretaste (§) se usan para canjear dentro de la app. Puedes obtener créditos de las siguientes formas:</p>
+    <div class="col s12">
+        <p>Los créditos de Apretaste (§) se usan para canjear dentro de la app. Puedes obtener créditos de las
+            siguientes formas:</p>
 
-		<b>1. Invitando amigos</b>
-		<p>Invita a tus amigos y familiares a usar la app y tanto tú como ellos ganarán créditos. Encuentra el link a invitar en el menú de la izquierda.</p>
+        <b>1. Invitando amigos</b>
+        <p>Invita a tus amigos y familiares a usar la app y tanto tú como ellos ganarán créditos. Encuentra el link a
+            invitar en el menú de la izquierda.</p>
 
-		<b>2. Respondiendo encuestas</b>
-		<p>En Apretaste se ofrecen encuestas, y cada una de ellas ofrece diferentes premios en crédito al completarlas. Accede al servicio Encuesta para ver la lista de encuestas activas.</p>
+        <b>2. Respondiendo encuestas</b>
+        <p>En Apretaste se ofrecen encuestas, y cada una de ellas ofrece diferentes premios en crédito al completarlas.
+            Accede al servicio Encuesta para ver la lista de encuestas activas.</p>
 
-		<b>3. Cumpliendo retos</b>
-		<p>Cada día salen nuevos retos que te ayudan a ganar créditos. Abre los retos desde el menú a la izquierda y empieza a trabajar en ellos.</p>
+        <b>3. Cumpliendo retos</b>
+        <p>Cada día salen nuevos retos que te ayudan a ganar créditos. Abre los retos desde el menú a la izquierda y
+            empieza a trabajar en ellos.</p>
 
-		<b>4. Ganando concursos</b>
-		<p>En Apretaste tenemos concursos con premios que van desde teléfonos y recargas Cubacel hasta crédito. Revisa los concursos activos y empieza a ganar.</p>
+        <b>4. Ganando concursos</b>
+        <p>En Apretaste tenemos concursos con premios que van desde teléfonos y recargas Cubacel hasta crédito. Revisa
+            los concursos activos y empieza a ganar.</p>
 
-		<b>5. Encontrando cupones</b>
-		<p>Encuentra cupones entre nuestros emails y gana créditos cuando los canjeas en la app.</p>
-	</div>
+        <b>5. Canjeando cupones</b>
+        <p>Los cupones son palabras claves como APRETASTE1 o NAVIDADAP presentes en los correos informativos que son
+            enviados en las fechas importantes como efemérides, cambios importantes en la app o fechas patrias. Está
+            atento a dichos correos y siempre aumentarás tu crédito.</p>
+    </div>
 </div>
