--- a/templates/obtain.ejs
+++ b/templates/obtain.ejs
@@ -23,10 +23,8 @@
             ["Invitando amigos", "Invita a tus amigos y familiares a usar la app y tanto tú como ellos ganarán créditos. Encuentra el link a invitar en el menú de la izquierda."],
             ["Respondiendo encuestas", "En Apretaste se ofrecen encuestas, y cada una de ellas ofrece diferentes premios en crédito al completarlas. Accede al servicio Encuesta para ver la lista de encuestas activas."],
             ["Cumpliendo retos", "Cada día salen nuevos retos que te ayudan a ganar créditos. Abre los retos desde el menú a la izquierda y empieza a trabajar en ellos."],
-            ["Ganando concursos"," En Apretaste tenemos concursos con premios que van desde teléfonos y recargas Cubacel hasta crédito. Revisa  los concursos activos y empieza a ganar."],
-            ["Canjeando cupones","Los cupones son palabras claves como APRETASTE1 o NAVIDADAP presentes en los correos informativos que son \n" +
-            "enviados en las fechas importantes como efemérides, cambios importantes en la app o fechas patrias. Está \n" +
-            "atento a dichos correos y siempre aumentarás tu crédito."]
+            ["Ganando concursos", "En Apretaste tenemos concursos con premios que van desde teléfonos y recargas Cubacel hasta crédito. Revisa  los concursos activos y empieza a ganar."],
+            ["Canjeando cupones", "Los cupones son palabras claves como APRETASTE1 o NAVIDADAP presentes en los correos informativos que son enviados en las fechas importantes como efemérides, cambios importantes en la app o fechas patrias. Está atento a dichos correos y siempre aumentarás tu crédito."]
         ]; for(var i in items) { %>
             <li class="collection-item avatar">
                 <i class="number circle"><%= i + 1 %></i>
